// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container DeleteResource should render with proper resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "componentId": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "found": true,
        "id": undefined,
        "label": "myLabel",
        "resourceType": "myResourceType",
        "resourceTypeLabel": "resourceLabel",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#cancel",
    }
  }
  getComponent={undefined}
  header="My header title"
  show={true}
  validateAction={
    Object {
      "bsStyle": "danger",
      "componentId": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "found": true,
        "id": undefined,
        "label": "myLabel",
        "resourceType": "myResourceType",
        "resourceTypeLabel": "resourceLabel",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#validate",
    }
  }
>
  <div>
    Are you sure you want to remove the resourceLabel
     
    <strong>
      myLabel
    </strong>
    ?
  </div>
</ConfirmDialog>
`;

exports[`Container DeleteResource should render with wrong resourceInfo params 1`] = `
<ConfirmDialog
  cancelAction={
    Object {
      "componentId": "dialog:delete:cancel",
      "label": "No",
      "model": Object {
        "found": false,
        "id": undefined,
        "label": "",
        "resourceType": "unknownResourceType",
        "resourceTypeLabel": "unknownResourceType",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#cancel",
    }
  }
  getComponent={undefined}
  header="My header title"
  show={true}
  validateAction={
    Object {
      "bsStyle": "danger",
      "componentId": "dialog:delete:validate",
      "label": "Yes",
      "model": Object {
        "found": false,
        "id": undefined,
        "label": "",
        "resourceType": "unknownResourceType",
        "resourceTypeLabel": "unknownResourceType",
        "uri": "/myEndpoint",
      },
      "onClickActionCreator": "DeleteResource#validate",
    }
  }
>
  <div>
    Are you sure you want to remove the unknownResourceType
     
    <strong />
    ?
  </div>
</ConfirmDialog>
`;
